--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 12 13:45:03 CET 2019
-sdk.dir=C\:\\Users\\Juan Luis\\AppData\\Local\\Android\\Sdk
+#Tue Dec 03 10:27:44 CET 2019
+sdk.dir=C\:\\Android\\Sdk
