--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Dec 03 10:27:44 CET 2019
-sdk.dir=C\:\\Android\\Sdk
+sdk.dir=C\:\\Users\\Juan Luis\\AppData\\Local\\Android\\Sdk
